Fix spacing issues on data list styles

--- a/app/assets/stylesheets/govuk_elements.sass
+++ b/app/assets/stylesheets/govuk_elements.sass
@@ -53,13 +53,13 @@ $path: ''
     clear: left
     display: inline-block
     height: 1.75em
+  dt:after
+    content: ":"
   dd
     width: 60%
     float: left
-    height: 1.75em
     display: inline
-  dd.address, p.previous-names
-    height: 7em
+    padding-bottom: 1em
   p.previous-names
     font-size: 90%
     color: grey
